--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>TV Show Recomendations </title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -41,10 +41,10 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+              <a class="nav-link js-scroll-trigger" href="#services">Take Quiz</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+              <a class="nav-link js-scroll-trigger" href="#portfolio">General Recomendations</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -59,12 +59,12 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong>Your Favorite Source of Free Bootstrap Themes</strong>
+              <strong>Your Go-To Website to get TV show recomendations</strong>
             </h1>
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+            <p class="text-faded mb-5">Start To Get Personalized TV Show Recomendations Now!</p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
           </div>
         </div>
@@ -75,10 +75,10 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">We've got what you need!</h2>
+            <h2 class="section-heading text-white">The Perfect TV Show Recomendations</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-            <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+            <p class="text-faded mb-4">Take the quiz and get personalized TV Show recomendations! Or you can get general TV Show recomendations! Click the button to take the Quiz NOW!</p>
+            <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Take Quiz!</a>
           </div>
         </div>
       </div>
@@ -132,29 +132,35 @@
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="../static/img/portfolio/fullsize/1.jpg">
-              <img class="img-fluid" src="../static/img/portfolio/thumbnails/1.jpg" alt="">
+              <img class="img-fluid" src="../static/Comedy_Image.jpg"
+              width = "850"
+              height = "500"
+              alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    <h2><strong>Comedy</strong></h2>
                   </div>
                   <div class="project-name">
-                    Project Name
+                    Looking for Something Funny?
                   </div>
                 </div>
               </div>
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="../static/img/portfolio/fullsize/2.jpg">
-              <img class="img-fluid" src="../static/img/portfolio/thumbnails/2.jpg" alt="">
+            <a class="portfolio-box" href="../static/Drama_Image.jpg">
+              <img class="img-fluid" src="../static/Drama_Neon.jpg"
+              width = "850"
+              height = "500"
+              alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    <h2><strong>Drama</strong></h2>
                   </div>
                   <div class="project-name">
-                    Project Name
+                    Loking for something...
                   </div>
                 </div>
               </div>
@@ -162,14 +168,14 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="../static/img/portfolio/fullsize/3.jpg">
-              <img class="img-fluid" src="../static/img/portfolio/thumbnails/3.jpg" alt="">
+              <img class="img-fluid" src="../static/Adventure.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    <h2><strong>Action/Adventure</strong></h2>
                   </div>
                   <div class="project-name">
-                    Project Name
+                    Looking for something adventerous?
                   </div>
                 </div>
               </div>
@@ -177,14 +183,14 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="../static/img/portfolio/fullsize/4.jpg">
-              <img class="img-fluid" src="../static/img/portfolio/thumbnails/4.jpg" alt="">
+              <img class="img-fluid" src="../static/DC-Superhero-PTSD.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    <h2><strong>Superhero</strong></h2>
                   </div>
                   <div class="project-name">
-                    Project Name
+                    Looking for something...
                   </div>
                 </div>
               </div>
@@ -196,10 +202,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    <h2><strong>Suspence</strong></h2>
                   </div>
                   <div class="project-name">
-                    Project Name
+                    Looking for something...
                   </div>
                 </div>
               </div>
@@ -207,14 +213,14 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="../static/img/portfolio/fullsize/6.jpg">
-              <img class="img-fluid" src="../static/img/portfolio/thumbnails/6.jpg" alt="">
+              <img class="img-fluid" src="../static/romance.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    <h2><strong>Romance</strong></h2>
                   </div>
                   <div class="project-name">
-                    Project Name
+                    Looking for something romantic?
                   </div>
                 </div>
               </div>
