--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
     <link href="../static/vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../static/css/creative.min.css" rel="stylesheet">
+    <link href="../static/css/creative.css" rel="stylesheet">
 
   </head>
 
@@ -83,58 +83,59 @@
         </div>
       </div>
     </section>
-
     <section id="services">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2 class="section-heading">At Your Service</h2>
-            <hr class="my-4">
-          </div>
+      <form action="{{ url_for('process_inputs') }}" method="post">
+        <div class="form-group">
+          <label for="input_name">First Name</label>
+          <input type="text" class="form-control" name="input_name"  id="input_name" placeholder="Fred Flintstone">
         </div>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3 col-md-6 text-center">
-            <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-diamond text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Sturdy Templates</h3>
-              <p class="text-muted mb-0">Our templates are updated regularly so they don't break.</p>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 text-center">
-            <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-paper-plane text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Ready to Ship</h3>
-              <p class="text-muted mb-0">You can use this theme as is, or you can make changes!</p>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 text-center">
-            <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-newspaper-o text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Up to Date</h3>
-              <p class="text-muted mb-0">We update dependencies to keep things fresh.</p>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 text-center">
-            <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Made with Love</h3>
-              <p class="text-muted mb-0">You have to make your websites with love these days!</p>
-            </div>
-          </div>
+        <div class="container">
+        <form action="{{ url_for('process_inputs') }}" method="post">
+        <div class="form-group">
+          <label for="input_dropdown">Genre</label>
+          <select class="form-control" name="input_dropdown" id="input_dropdown">
+            <option>Comedy</option>
+            <option>Drama</option>
+            <option>Superhero</option>
+            <option>Suspence</option>
+            <option>Reality</option>
+          </select>
         </div>
-      </div>
+        <div class="form-group">
+          <label for="input_sel">What network do you want?</label>
+          <select  class="form-control" name="input_dropdown" id="input_dropdown">
+            <option>CW</option>
+            <option>NBC</option>
+            <option>ABC</option>
+            <option>Netflix</option>
+            <option>Hulu</option>
+          </select>
+        </div>
+        </div>
+        <div class="form-group">
+          <label for="input_select">What type of show do you want?</label>
+          <select  class="form-control" name="input_dropdown" id="input_dropdown">
+            <option>Past</option>
+            <option>Current</option>
+          </select>
+        </div>
+    <div class="container">
+      {% if input_data %} {{ input_data }} {% endif %}
+      <br />
+      {% if output %} {{ output }} {% endif %}
+    </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
     </section>
 
     <section class="p-0" id="portfolio">
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="../static/img/portfolio/fullsize/1.jpg">
+            <a class="portfolio-box" href="../static/Comedy_Image.jpg">
               <img class="img-fluid" src="../static/Comedy_Image.jpg"
-              width = "850"
-              height = "500"
               alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -150,9 +151,7 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="../static/Drama_Image.jpg">
-              <img class="img-fluid" src="../static/Drama_Neon.jpg"
-              width = "850"
-              height = "500"
+              <img class="img-fluid" src="../static/Drama_Image.jpg"
               alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -167,8 +166,9 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="../static/img/portfolio/fullsize/3.jpg">
-              <img class="img-fluid" src="../static/Adventure.jpg" alt="">
+            <a class="portfolio-box" href="../static/Adventure.jpg">
+              <img class="img-fluid" src="../static/Adventure.jpg"
+              alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
@@ -182,8 +182,9 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="../static/img/portfolio/fullsize/4.jpg">
-              <img class="img-fluid" src="../static/DC-Superhero-PTSD.jpg" alt="">
+            <a class="portfolio-box" href="../static/DC-Superhero-PTSD.jpg">
+              <img class="img-fluid" src="../static/DC-Superhero-PTSD.jpg"
+              alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
@@ -198,7 +199,8 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="../static/img/portfolio/fullsize/5.jpg">
-              <img class="img-fluid" src="../static/img/portfolio/thumbnails/5.jpg" alt="">
+              <img class="img-fluid" src="../static/img/portfolio/thumbnails/5.jpg"
+              alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
@@ -212,8 +214,9 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="../static/img/portfolio/fullsize/6.jpg">
-              <img class="img-fluid" src="../static/romance.jpg" alt="">
+            <a class="portfolio-box" href="../static/romance.jpg">
+              <img class="img-fluid" src="../static/romance.jpg"
+              alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
