there are now working options forCW NBC ABC Hulu and Netflix; each have 5 genres and past and currect options.

--- a/templates/index.html
+++ b/templates/index.html
@@ -97,9 +97,9 @@
           <select class="form-control" name="input_dropdown" id="input_dropdown">
             <option>Comedy</option>
             <option>Drama</option>
-            <option>Superhero</option>
+            <option>Action</option>
             <option>Suspence</option>
-            <option>Reality</option>
+            <option>Reality(n/a for HUlU</option>
           </select>
         </div>
         <div class="form-group">
